--- a/miniprogram/project.private.config.json
+++ b/miniprogram/project.private.config.json
@@ -57,6 +57,19 @@
         {
           "name": "pages/updateRecordSuccess/index",
           "pathName": "pages/updateRecordSuccess/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "login",
+          "pathName": "pages/1_login/login",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "home",
+          "pathName": "pages/2_1home/home",
+          "query": "",
           "scene": null
         }
       ]
